--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,9 @@ psutil>=5.9.0
 # pytest-cov>=4.0.0
 # black>=23.0.0
 # flake8>=6.0.0
+
+# Melhoria para extração de PDF
+pdfplumber>=0.11.0
+unstructured>=0.15.0
+unstructured-inference>=0.7.0
+pdf2image>=1.17.0
